# ds_lectures

./: .env.example  .gitignore  README.md
data/01_raw/book_robot/: wiki_GPT2.txt  wiki_LaMDA.txt  wiki_LlaMA.txt
gpt_chatbot/: .gitignore  README.md  gpt_chatbot.ipynb  secrets.sh
gpt_chatbot/data/01_raw/book_robot/: wiki_BERT.txt  wiki_GPT3.txt  wiki_GPT4.txt  wiki_LLM.txt  wiki_PaLM.txt
gpt_chatbot/src/: config.py
lectures/agentic_app_builders/: .env.example  .pre-commit-config.yaml  01_pydantic_ai_summarizer.ipynb  02_langgraph_summarizer.ipynb  03_openai_agents_sdk_summarizer.ipynb  04_google_adk_summarizer.ipynb  README.md  pyproject.toml
lectures/agentic_app_builders/src/: config.py
lectures/agentic_app_builders/src/mcp_servers/: __init__.py  scraper_server.py
lectures/agentic_app_builders/src/tools/: __init__.py  summarizer.py
lectures/agentic_app_builders/src/tools/parsers/: __init__.py  _text_clean.py  html_parser.py  pdf_parser.py
lectures/openai_chatbot/: README.md  build_and_use_chatbots.ipynb  demo_openai_bot.yaml
src/: configloader.py
src/chatbot_apps/: __init__.py  chatbot_builder.py  knowledge_base_builder.py
src/llm_prompts/: chatbotprompts.JSON
src/utils/file_preproc_utils/: __init__.py  common_prep_utils.py  pdf_preprocessor.py  txt_preprocessor.py
src/utils/llm_utils/: __init__.py  openai_chat.py  openai_embedder.py
